--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "cloudinary": "^1.35.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -11,7 +12,6 @@
     "http-errors": "^2.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0"
-    
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
