--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "nodemon server/index.js --ignore client",
     "start":"node server",
-    "build":"npm install --prefix client && npm run build --prefix client"
+    "build":"npm install --prefix client && npm run build --prefix client && rm -rf client/node_modules"
   },
   "dependencies": {
     "cloudinary": "^1.35.0",
